alle features herschreven, alleen nog controleren op bronnen.

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2990,7 +2990,7 @@
     "--- \n",
     "#### **Rhythmic Regularity**\n",
     "\n",
-    "Variability in inter-beat intervals (IBI) measures the consistency of a rhythm by analyzing  the time gap between beats in a audio signal. A more consistent IBI is often found in genres like dance music, since these songs rely on a consistent beat for easy dance movements. An irregular IBI suggest a more complext rhythm, which are more common in genres with non-repetetive structuers. \n",
+    "Variability in inter-beat intervals (IBI) measures the consistency of a rhythm by analyzing  the time gap between beats in a audio signal. A more consistent IBI is often found in genres like dance music, since these songs rely on a consistent beat for easy dance movements. An irregular IBI suggest a more complext rhythm, which are more common in genres with non-repetetive structures. \n",
     "\n",
     "\n",
     "**Inter-Beat Interval:**\n",
@@ -3026,12 +3026,11 @@
     "---\n",
     "\n",
     "#### Harmonic Features\n",
-    "-\tKey and Scale Estimation (Chroma): Captures harmonic content by representing the energy distribution across pitches.\n",
-    "-\tWhy Useful: Harmonic structures can help distinguish classical music (well-defined key signatures) from atonal genres (e.g., some experimental electronic).\n",
+    "Key and Scale Estimation (Chroma) analyze the dsitribution of musical pitches to understand a song's harmonic and melodic characteristics while being robust to changes in timbre and instrumentation.  It can help identify if a song has a clear key signature or doesn't have one. \n",
     "\n",
     "**Chroma vector:**\n",
     "\n",
-    "The chroma vector C(t) represents the energy distribution across 12 pitch classes at each time frame \\( t \\):\n",
+    "The chroma vector C(t)C(t) describes the distribution of energy across 12 pitch classes at each time frame \\( t \\):\n",
     "\n",
     "$$\n",
     "\\mathbf{C}(t) = [C_1(t), C_2(t), ..., C_{12}(t)]\n",
@@ -3041,7 +3040,7 @@
     "\n",
     "**Mean of chromagram:**\n",
     "\n",
-    "The mean chromagram μchroma is calculated by averaging the chroma vector over time:\n",
+    "The mean chromagram μchroma is computed by taking the average of the chroma vector over time:\n",
     "\n",
     "$$\n",
     "\\mu_{\\text{chroma}} = \\frac{1}{T} \\sum_{t=1}^{T} \\mathbf{C}(t)\n",
@@ -3055,22 +3054,22 @@
     "\\sigma_{\\text{chroma}}^2 = \\frac{1}{T} \\sum_{t=1}^{T} (\\mathbf{C}(t) - \\mu_{\\text{chroma}})^2\n",
     "$$\n",
     "\n",
+    "Author(s). (2019). Chroma feature extraction. ResearchGate. https://www.researchgate.net/publication/330796993_Chroma_Feature_Extraction\n",
+    "\n",
     "---\n",
     "\n",
     "#### Tonnetz Features\n",
-    "-\tWhat It Does: Captures tonal relations like harmonic complexity or consonance/dissonance.\n",
-    "-\tWhy Useful: Helps differentiate harmonically rich genres like jazz from simpler genres like punk rock.\n",
+    "Tonnetz features capture tonal relations like harmonic complexity in an audio signal. It helps differentiate harmonically rich genres like jazz from simpler genres like rock. \n",
     "\n",
+    "Tonnetz is calculated using four key dimensions:\n",
     "\n",
-    "The general approach for calculating Tonnetz is by considering the following four dimensions (or features):\n",
+    "First dimension: The fundamental frequency (F0).\n",
     "\n",
-    "First dimension: The root of the chord, the fundamental frequency (F0).\n",
+    "Second dimension: The pitch relationship between the first and fifth harmonic.\n",
     "\n",
-    "Second dimension: The fifth interval (relative pitch between the first and fifth harmonic).\n",
+    "Third dimension: The pitch relationship between the first and third harmonic.\n",
     "\n",
-    "Third dimension: The third interval (relative pitch between the first and third harmonic).\n",
-    "\n",
-    "Fourth dimension: The shift of harmony (relative tonal changes between the first and second harmonics).\n",
+    "Fourth dimension: Tonal changes between the first and second harmonics.\n",
     "\n",
     "These intervals are combined using the following general formula:\n",
     "\n",
@@ -3081,12 +3080,12 @@
     "---\n",
     "\n",
     "#### Harmonic-to-Percussive Ratio (HPR)\n",
-    "-\tWhat It Does: Measures the balance between harmonic and percussive content.\n",
-    "-\tWhy Useful: Percussion-heavy genres like hip-hop have a lower HPR compared to harmonic genres like classical.\n",
+    "Harmonic-to-percussive ratio measures the balance between harmonic and percussive content in audio signals. Harminic content is what we perceive as pitched sound (what makes us hear melodies and chords). Percussive sound is what we perceive as clash (a knock or clap for example). It's useful because percussion-heavy genres like hip hop usually have a lower HPR then harmonic genres like classical music with an higher HPR. This way it helps to distinguish different musical styles. \n",
     "\n",
-    "1. **Fourier Transform** is used to get the frequency components of the audio signal:\n",
     "\n",
-    "As with harmonic and percussive energy, we first compute the Fourier Transform of the audio signal x(t)x(t) to obtain the frequency-domain representation:\n",
+    "1. The Fourier Transform is used to get the frequency components of the audio signal:\n",
+    "\n",
+    "Similar to analyzing harmonic and percussive energy, we first apply the Fourier Transform to the audio signal x(t)x(t) to obtain its frequency-domain representation.\n",
     "\n",
     "$$\n",
     "X(f) = \\int_{-\\infty}^{\\infty} x(t) e^{-j 2 \\pi f t} dt\n",
@@ -3094,11 +3093,12 @@
     "\n",
     "2. Separation of Harmonic and Percussive Components:\n",
     "\n",
-    "To isolate harmonic and percussive content, we use an audio decomposition technique that separates the signal into two components: harmonic and percussive.\n",
+    "To separate the signal into two disteinct components (harmonic and percussive) an audio decomposition is being used. \n",
     "\n",
-    "3. **Energy calculation** for harmonic and percussive components:\n",
     "\n",
-    "Once the harmonic and percussive components are isolated, we calculate the energy in each component:\n",
+    "1. Energy calculation for harmonic and percussive components:\n",
+    "\n",
+    "Once the harmonic and percussive components are separated, we calculate the energy in each component:\n",
     "\n",
     "- Harmonic energy:\n",
     "\n",
@@ -3112,7 +3112,7 @@
     "E_{\\text{percussive}} = \\sum_{f \\in F_{\\text{percussive}}} |X(f)|\n",
     "$$\n",
     "\n",
-    "4. **Harmonic-to-Percussive Ratio (HPR)** is calculated as:\n",
+    "4. Harmonic-to-Percussive Ratio (HPR) is calculated as:\n",
     "\n",
     "$$\n",
     "\\text{HPR} = \\frac{E_{\\text{harmonic}}}{E_{\\text{percussive}}}\n",
@@ -3120,16 +3120,17 @@
     "\n",
     "Where Fharmonic and Fpercussive are the frequency sets for harmonic and percussive content, respectively.\n",
     "\n",
+    "Audiolabs Erlangen. (n.d.). Harmonic-Percussive Separation (HPS). Retrieved from https://www.audiolabs-erlangen.de/resources/MIR/FMP/C8/C8S1_HPS.html\n",
+    "\n",
+    "\n",
     "---\n",
     "\n",
     "#### Genre-Specific Features\n",
-    "-\tHarmonic Energy: Indicates the presence of harmonic components.\n",
-    "-\tPercussive Energy: Highlights rhythmic elements.\n",
-    "-\tWhy Useful: Helps isolate characteristics of percussion-heavy or harmony-rich genres.\n",
+    "Harmonic energy reflects the presence of harmonic components, while percussive energy highlights rhythmic elements. This distinction is useful for separating characteristics of percussion-heavy genres like hip-hop or harmony-rich genres like classical music.\n",
     "\n",
     "**Summary of the Math:**\n",
     "\n",
-    "- **Harmonic Energy:**\n",
+    "- Harmonic Energy:\n",
     "\n",
     "$$\n",
     "E_{\\text{harmonic}} = \\sum_{n=1}^{N} |X(n f_0)|\n",
@@ -3137,7 +3138,7 @@
     "\n",
     "Where f0 is the fundamental frequency, and X(nf0​)  represents the spectral components at the n-th harmonic.\n",
     "\n",
-    "- **Percussive Energy:**\n",
+    "- Percussive Energy:\n",
     "\n",
     "$$\n",
     "E_{\\text{percussive}} = \\sum_{f \\in F_{\\text{percussive}}} |X(f)|\n",
@@ -3145,16 +3146,17 @@
     "\n",
     "Where Fpercussive is the set of frequencies associated with non-harmonic (percussive) components.\n",
     "\n",
+    "Audiolabs Erlangen. (n.d.). Harmonic-Percussive Separation (HPS). Retrieved from https://www.audiolabs-erlangen.de/resources/MIR/FMP/C8/C8S1_HPS.html\n",
+    "\n",
     "---\n",
     "\n",
     "#### Zero-Crossing Rate (ZCR)\n",
     "\n",
     "**1. Zero-Crossing Definition**\n",
     "\n",
-    "-\tWhat It Does: Counts how often the signal crosses zero amplitude.\n",
-    "-\tWhy Useful: Indicates the noisiness of a signal, with higher ZCR in percussive genres (e.g., techno) and lower ZCR in smooth genres (e.g., orchestral).\n",
+    "Zero-Crossing Rate (ZCR) measures how often a certain signal crosses the zero amplitude. This indicates the noisiness of a audio signal. Higher ZCR values are comon in percussive genres like techno, while lower ZCR values are found in smoother genres like classical music. \n",
     "\n",
-    "A zero-crossing occurs when the signal changes sign between two consecutive time points. More formally:\n",
+    "A zero-crossing happens when the signal transitions from positive to negative or vice versa between two consecutive time points. More formally:\n",
     "\n",
     "- Let x(t) represent the audio signal at time t.\n",
     "- A zero-crossing occurs when:\n",
@@ -3174,12 +3176,12 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "Here, Δt is the time interval between two consecutive samples or frames.\n",
+    "Δt is the time interval between two consecutive samples or frames.\n",
     "\n",
     "\n",
     "**2. Counting Zero-Crossings**\n",
     "\n",
-    "For a given signal \\( x(t) \\), the zero-crossing rate (ZCR) is computed by counting how often the sign of the signal changes over a certain period of time. More precisely, for a given time window, the zero-crossing rate is defined as:\n",
+    "For a given signal \\( x(t) \\), the zero-crossing rate (ZCR) is calculated by counting how often the sign of the signal changes over a certain period of time. The zero-crossing rate is being defined for a certain window as: M\n",
     "\n",
     "$$\n",
     "ZCR = \\frac{1}{N} \\sum_{i=1}^{N-1} \\mathbb{I}( \\text{sgn}(x(t_i)) \\neq \\text{sgn}(x(t_{i+1})))\n",
@@ -3187,13 +3189,13 @@
     "\n",
     "\n",
     "Where:\n",
-    "- N is the total number of samples in the window.\n",
+    "- N is the total amount of samples in the window.\n",
     "- I is the indicator function that equals 1 if the condition inside the parentheses is true (i.e., if the sign changes), and 0 otherwise.\n",
     "- 'ti' is the time index of the 'i-th' sample.\n",
     "\n",
     "**3. Normalization**\n",
     "\n",
-    "Typically, the ZCR is normalized by dividing by the length of the window (or the number of samples in that window), so it expresses the rate of zero-crossings per unit of time. This gives the final ZCR as a ratio:\n",
+    "The Zero Crossing Rate (ZCR) is typically normalized by dividing by the window length (the number of samples in the window), representing the rate of zero-crossings per unit of time. By doing this you get the ZCR as a ratio.\n",
     "\n",
     "$$\n",
     "ZCR = \\frac{1}{T} \\sum_{i=1}^{N-1} \\mathbb{I}( \\text{sgn}(x(t_i)) \\neq \\text{sgn}(x(t_{i+1})))\n",
@@ -3206,8 +3208,8 @@
     "---\n",
     "\n",
     "#### Onset Autocorrelation\n",
-    "-\tWhat It Does: Measures periodicity in onsets, reflecting rhythmic patterns.\n",
-    "-\tWhy Useful: Helps identify repetitive rhythms typical in dance music versus free-form genres.\n",
+    "\n",
+    "Onset autocorrelation measures the periodicity of onsets, capturing different rhythmic patterns. It helps identify repetitive rhytms that are typical in certain genres. \n",
     "\n",
     "**Autocorrelation:**\n",
     "\n",
@@ -3215,9 +3217,9 @@
     "R(\\tau) = \\sum_{t=1}^{T-\\tau} x(t) \\cdot x(t + \\tau)\n",
     "$$\n",
     "\n",
-    "This formula computes how much the signal x(t) is similar to a shifted version of itself by a time lag ττ.\n",
+    "This formula calculates how much the signal x(t) is similar to a shifted version of itself by a time lag ττ.\n",
     "\n",
-    "Lag ττ: The lag ττ represents the offset at which you're comparing the signal with itself. You would typically compute autocorrelation for multiple lags to observe different periodicities.\n",
+    "Lag ττ: The lag ττ  represents the time offset used to compare the signal with itself. Autocorrelation is typically calculated for multiple lags to analyze different periodicities.\n",
     "\n",
     "Peak Finding: Peaks in the autocorrelation function at regular intervals are indicative of rhythmic patterns.\n",
     "\n",
@@ -3226,9 +3228,7 @@
     "---\n",
     "\n",
     "#### Skewness and Kurtosis\n",
-    "-\tWhat They Do: Statistical measures of the amplitude distribution's shape.\n",
-    "-\tWhy Useful: Help capture the signal's symmetry and peakedness, differentiating genres based on amplitude dynamics.\n",
-    "\n",
+    "Skewness and kurtosis are statistical measures of the amplitude distribution's shape, capturing a signal's symmetry and peakedness. It differentiates genres bases on the amplitude's dynamics. \n",
     "\n",
     "**Skewness**\n",
     "\n",
@@ -3240,7 +3240,7 @@
     "\n",
     "Where:\n",
     "\n",
-    "- N: The number of samples (e.g., amplitude samples in an audio file).\n",
+    "- N: The number of samples (amplitude samples in an audio file).\n",
     "- xi: An individual value (amplitude value).\n",
     "- μ: The mean of the values, calculated as:\n",
     "\n",
@@ -3248,7 +3248,7 @@
     "σ = \\frac{1}{N} \\sum_{i=1}^{N} x_i\n",
     "$$\n",
     "\n",
-    "- σ: The standard deviation of the values, calculated as:\n",
+    "- σ: The standard deviation of the values is calculated as:\n",
     "\n",
     "$$\n",
     "\\sigma = \\sqrt{\\frac{1}{N} \\sum_{i=1}^{N} (x_i - \\mu)^2}\n",
@@ -3265,9 +3265,9 @@
     "\n",
     "Where:\n",
     "\n",
-    "- N: The number of samples (e.g., amplitude samples in an audio file).\n",
+    "- N: The number of samples (amplitude samples in an audio file).\n",
     "- xi: An individual value (amplitude value).\n",
-    "- μ: The mean of the values, calculated as:\n",
+    "- μ: The mean of the values is calculated as:\n",
     "\n",
     "$$\n",
     "\\mu = \\frac{1}{N} \\sum_{i=1}^{N} x_i\n",
