changed kmeans and kmedoids explanation

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -6683,28 +6683,26 @@
     "\n",
     "\n",
     "#### What is K-Means?\n",
-    "- **K-Means** is an unsupervised learning algorithm used to cluster data points into a predefined number of clusters, \\( k \\).\n",
-    "- You tell the algorithm how many clusters \\( k \\) you want, and it will group the data into those \\( k \\) clusters.\n",
-    "- The goal is to minimize the *within-cluster variance* (make each cluster as tight or “compact” as possible).\n",
+    "- K-Means is an unsupervised learning algorithm that clusters data points into a predefined number of clusters, \\( k \\).\n",
+    "- The main goal is to minimize the \"within-cluster variance\". In other words: you want the cluster to be as compact as possible. \n",
     "\n",
     "#### How it Works\n",
     "\n",
     "1. **Initialization**  \n",
-    "   - Randomly pick \\( k \\) data points from your dataset as the initial “cluster centers” (also called centroids).  \n",
+    "   - Randomly pick \\( k \\) data points from your dataset as the initial “cluster centers” (centroids) \n",
     "\n",
     "2. **Assignment**  \n",
-    "   - Assign every data point to the closest centroid, often using a distance metric like **Euclidean distance**.\n",
+    "   - Then assign every data point to the closest centroid based on a chosen distance metric (euclidian or manhatten for example)\n",
     "\n",
     "3. **Update (Recompute Centroids)**  \n",
-    "   - For each cluster, compute the new centroid by taking the **mean** of all the points assigned to that cluster.  \n",
-    "   - This gives you updated positions for your \\( k \\) centroids.\n",
+    "   - Calculate the new centroid for each cluster by taking the mean of all the points assigned to that cluster.  \n",
+    "   - This gives the new positions for \\( k \\) centroids.\n",
     "\n",
     "4. **Repeat**  \n",
-    "   - Re-assign data points to these new centroids and recompute the means.  \n",
-    "   - Continue iterating until the centroids don’t change much (convergence) or until you reach some preset maximum number of iterations.\n",
-    "\n",
+    "   - Keep repeating this \"recompute centroid\" process until the centroids don't change as much or till you reach a preset maximum number of iterations. \n",
+    "   - \n",
     "#### Distance Metric\n",
-    "- Typically **Euclidean distance** is used for K-Means:\n",
+    "- Typically \"Euclidean distance\" is used for K-Means:\n",
     "$$\n",
     "d(\\mathbf{x}_i, \\mathbf{x}_j) = \\sqrt{\\sum_{k=1}^n (x_{ik} - x_{jk})^2}\n",
     "$$\n",
@@ -6712,11 +6710,11 @@
     "\n",
     "#### Advantages\n",
     "- Simple to understand and relatively fast to compute.\n",
-    "- Works well if your data forms roughly spherical (blob-like) clusters.\n",
+    "- It performs well when your data is organized into approximately spherical clusters.\n",
     "\n",
     "#### Disadvantages\n",
-    "- **Sensitive to outliers**: a few extreme values can shift the mean significantly.\n",
-    "- You need to choose \\( k \\) in advance (which may be tricky).\n",
+    "- **Sensitive to outliers**: when there's a few extreme values (outliers) the mean can shift significantly . \n",
+    "- You need to choose \\( k \\) in advance, which could lead to issues. \n",
     "- It assumes clusters are roughly similar in size and shape (spherical or convex).\n",
     "- In very high-dimensional data, Euclidean distance becomes less meaningful.\n"
    ]
@@ -6740,8 +6738,8 @@
     "\n",
     "\n",
     "#### What is K-Medoids?\n",
-    "- **K-Medoids** is a variation of K-Means that is more robust to outliers.\n",
-    "- Instead of using the *mean* of the points in each cluster, K-Medoids picks an actual data point within each cluster as its “center” (called a *medoid*).\n",
+    "- K-Medoids is a variation of K-Means, but it's more robust to outliers. \n",
+    "- K-medoids picks an actual data point within each cluster as its center / centroid instead of using the mean of all the datapoints. \n",
     "\n",
     "#### How it Works\n",
     "$$\n",
@@ -6758,32 +6756,32 @@
     "- \\( y_i \\): data on each \\( i \\)-th data point\n",
     "\n",
     "1. **Initialization**  \n",
-    "   - Randomly select \\( k \\) data points as the initial medoids (instead of centroids).\n",
+    "   - First you randomly select \\( k \\) data points as the initial medoids. \n",
     "\n",
     "2. **Assignment**  \n",
-    "   - Assign each remaining point to the cluster with the closest medoid (using a chosen distance metric, which can be Euclidean, Manhattan, etc.).\n",
+    "   - Then assign each leftover point tot he cluster with the closest medoid using a predefined distance metric. \n",
     "\n",
     "3. **Swapping Medoids**  \n",
-    "   - For each cluster, try swapping the current medoid with a non-medoid point in the same cluster to see if it reduces the total *distance* (or cost) of the cluster.  \n",
-    "   - If it does, keep the new point as the medoid; if it doesn’t, revert to the old medoid.\n",
+    "   - Try swapping the current medoid with another data point in the same cluster to see if it reduces the distance of the cluster. If it changes, keep the new point as the medoid, otherwise revert it to the old medoid. \n",
     "\n",
     "4. **Repeat**  \n",
-    "   - Continue these swap attempts until there’s no improvement in the total distance or until you hit a maximum iteration limit.\n",
+    "   - Repeat these swap attemts until there's no improvement in the total distance or until a predifined maximum amount of iterations is reached. \n",
     "\n",
     "#### Distance Metric\n",
-    "- Commonly **Manhattan distance** is used:\n",
+    "- Manhatten distance is the most common metric that's being used:\n",
     "  $$\n",
     "  d(\\mathbf{x}_i, \\mathbf{x}_j) = \\sum_{k=1}^{n} |x_{ik} - x_{jk}|\n",
     "  $$\n",
-    "- But you can also use Euclidean distance or other distance functions that make sense for your data. Because K-Medoids uses actual data points as cluster centers, it’s often more flexible for different distance measures.\n",
+    "- It's also possible to use other distance metrics like Euclidian distance. Since K-medoids uses actuald ata points it's often more flexible for different distance metrics. \n",
     "\n",
     "#### Advantages\n",
-    "- More **robust to outliers** compared to K-Means, because outliers can’t pull the “center” away -> the center has to be one of the existing points.\n",
-    "- Works well in situations where you want to use other distance metrics or your data has many extreme values.\n",
+    "- It's more robust to outliers compared to K-means, because actual data points are being used. \n",
+    "- It's more flexible with other distance metrics. \n",
     "\n",
     "#### Disadvantages\n",
-    "- Typically **slower** than K-Means because it repeatedly searches for better medoids by swapping candidates.\n",
-    "- Like K-Means, you need to pick \\( k \\) in advance.\n",
+    "- It's less efficiënt than K-means, because it it repeatedly seraches for a better medoid. \n",
+    "- You must pick \\( k \\) in advance. \n",
+    "\n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
