--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2716,7 +2716,7 @@
     "\n",
     "#### **Spectral Contrast**\n",
     "\n",
-    "Spectral contrast measures the difference in energy between different peaks and lows across the frequency of an audio file to hihglight the most prominent and least noticeable parts of an audio file. It shows how the energy levels vary across the spectrum, giving insights in the tonal texture and dynamic range of a sound. A high spectral contract, which is common for jazz, indicates a wide range within the frequency. A low spectral contact suggest that the spectral energy is distributed more evenly where different tones create a more smoother tonal texture. Spectral contrast is especially useful to differentiate between genres with similar timbres, but with different dynamic or harmonic structures. \n",
+    "Spectral contrast measures the difference in energy between different peaks and lows across the frequency of an audio file to hihglight the most prominent and least noticeable parts of an audio file. It shows how the energy levels vary across the spectrum, giving insights in the tonal texture and dynamic range of a sound. A high spectral contract, which is common for jazz, indicates a wide range within the frequency. A low spectral contrastt suggests that the spectral energy is distributed more evenly where different tones create a more smoother tonal texture. Spectral contrast is especially useful to differentiate between genres with similar timbres, but with different dynamic or harmonic structures. \n",
     "\n",
     "**How Spectral Contrast Is Constructed:**\n",
     "\n",
@@ -2781,7 +2781,7 @@
     "       High variance indicates a signal with sharp fluctuations, while low variance suggests smooth dynamics.\n",
     "\n",
     "3. **Measure Dynamics Over Time:**\n",
-    "   - Analyse how quickly amplitude rises and falls to udnerstand the temporal structure of the signal. \n",
+    "   - Analyse how quickly amplitude rises and falls to understand the temporal structure of the signal. \n",
     "\n",
     "4. **Compute Energy:**\n",
     "   - The total energy gives insight into the loudness:\n",
@@ -2798,7 +2798,7 @@
     "\n",
     "#### **Spectral Bandwidth**\n",
     "\n",
-    "Spectral band with captures the range of frequencies in a signal and provides insight into the energy distribution of music. It measures how spread out the frequency is around the spectral centroid. A wider bandwidth indicates the presence of high frequency components while a narrow bandwidth suggests more lower frequencies. This makes it a useful feature for genre differentiation, since energetic genres like rock and metal have wide bandwidths due to it's characteristics, while classic music has narrower bandwidths emphasizing smoother (lower frequency) sounds. \n",
+    "Spectral bandwith captures the range of frequencies in a signal and provides insight into the energy distribution of music. It measures how spread out the frequency is around the spectral centroid. A wider bandwidth indicates the presence of high frequency components while a narrow bandwidth suggests more lower frequencies. This makes it a useful feature for genre differentiation, since energetic genres like rock and metal have wide bandwidths due to it's characteristics, while classic music has narrower bandwidths emphasizing smoother (lower frequency) sounds. \n",
     "\n",
     "\n",
     "**How Spectral Bandwidth Is Constructed:**\n",
@@ -2887,15 +2887,15 @@
     "     \\text{Dynamic Range} = \\max(y) - \\min(y)\n",
     "     $$\n",
     "     - max(y): The peak amplitude of the signal, indicating the highest level of loudness.\n",
-    "     - min(y): The minimum amplitude of the signal, typically close to zero for quieter sounds.\n",
+    "     - min(y): The minimum amplitude of the signal, which is typically close to zero for quieter sounds.\n",
     "   - Amplitude values are taken as absolute values y[n] most of the times to ensure that extreme loudness are measured irrespective of polarity. \n",
     "\n",
     "2. **Smoothing Over Time**:\n",
-    "   - Momentary values can be misleading due to noise or outliers. Because of this the signal is usually analyzed in shorter timeframes.\n",
+    "   - Momentary values can cause issues, because it could be misleading due to noise or outliers. Because of this the signal is usually analyzed in shorter timeframes.\n",
     "   - The dynamic range is calculated for each frame. A summary statistic (mean or median) is used to represent the overall dynamic range of a song. \n",
     "\n",
     "3. **Relation to Perception**:\n",
-    "   - The ear perceived dyanmic range on a logarithmic scale, so a more accurate representation can be achieved by expressing the ratio of the louded to the softest levels in decibels (dB):\n",
+    "   - The ear perceived dynamic range on a logarithmic scale, so a more accurate representation can be achieved by expressing the ratio of the loudest to the softest levels in decibels (dB):\n",
     "     $$\n",
     "     \\text{Dynamic Range (dB)} = 20 \\cdot \\log_{10} \\left( \\frac{\\max(|y[n]|)}{\\min(|y[n]| + \\epsilon)} \\right)\n",
     "     $$\n",
@@ -6713,7 +6713,7 @@
     "- It performs well when your data is organized into approximately spherical clusters.\n",
     "\n",
     "#### Disadvantages\n",
-    "- **Sensitive to outliers**: when there's a few extreme values (outliers) the mean can shift significantly . \n",
+    "  Sensitive to outliers: when there's a few extreme values (outliers) the mean can shift significantly . \n",
     "- You need to choose \\( k \\) in advance, which could lead to issues. \n",
     "- It assumes clusters are roughly similar in size and shape (spherical or convex).\n",
     "- In very high-dimensional data, Euclidean distance becomes less meaningful.\n"
