changed k means mathemetical explanation

--- a/Opdracht_3/ML3_muziek_genres.ipynb
+++ b/Opdracht_3/ML3_muziek_genres.ipynb
@@ -2857,9 +2857,9 @@
     "     - This ignores the sign of the signal, focusing on its strength rather than its direction.\n",
     "\n",
     "   - Amplitude Variance measures the variability of the signal's strength:\n",
-    "     \\[\n",
+    "     $$\n",
     "     \\text{Variance} = \\frac{1}{N} \\sum_{n=1}^{N} \\left(|y[n]| - \\text{Mean Amplitude}\\right)^2\n",
-    "     \\]\n",
+    "     $$\n",
     "     - A high variance indicates that the signal's amplitude fluctuates from extreme low to extreme high values, while a low variance suggests more consistent intensity.\n",
     "\n",
     "3. **Temporal Considerations:**\n",
@@ -6700,7 +6700,7 @@
     "\n",
     "4. **Repeat**  \n",
     "   - Keep repeating this \"recompute centroid\" process until the centroids don't change as much or till you reach a preset maximum number of iterations. \n",
-    "   - \n",
+    " - \n",
     "#### Distance Metric\n",
     "- Typically \"Euclidean distance\" is used for K-Means:\n",
     "$$\n",
@@ -6709,13 +6709,13 @@
     "- Other metrics can be used, but Euclidean is by far the most common in K-Means.\n",
     "\n",
     "#### Advantages\n",
-    "- Simple to understand and relatively fast to compute.\n",
-    "- It performs well when your data is organized into approximately spherical clusters.\n",
+    "- It's easy to understand and relatively efficiënt to compute. \n",
+    "- When the data is organized in spherical cluster is usually performs well. \n",
     "\n",
     "#### Disadvantages\n",
-    "  Sensitive to outliers: when there's a few extreme values (outliers) the mean can shift significantly . \n",
+    "- Since it's taking the mean to define the centroids it's sensitive to outliers, because they can affect the mean significantly. \n",
     "- You need to choose \\( k \\) in advance, which could lead to issues. \n",
-    "- It assumes clusters are roughly similar in size and shape (spherical or convex).\n",
+    "- Even though it performs well when the data is organized in spherical clusters, it still assumes that the data is this way, so it might perform worse when it's not organized this way. \n",
     "- In very high-dimensional data, Euclidean distance becomes less meaningful.\n"
    ]
   },
@@ -6880,21 +6880,21 @@
     "\n",
     "## Problem Setup\n",
     "\n",
-    "Assume we have a dataset of `m` data points, where each data point is represented as a vector in an `n`-dimensional space:  \n",
+    "Assume we have a dataset of m data points, where each data point is represented as a vector in an n-dimensional space:  \n",
     "**x(i) ∈ ℝⁿ**, for **i = 1, 2, ..., m**.  \n",
     "\n",
-    "The goal is to partition these `m` points into `K` clusters in order to minimize the **within-cluster sum of squares**.\n",
+    "The objective is to divide these m points into K clusters while minimizing the within-cluster sum of squares.\n",
     "\n",
     "## Objective Function\n",
     "\n",
-    "We introduce `K` *centroids* (also called *cluster centers*):  \n",
+    "We define K centroids:  \n",
     "**μ₁, μ₂, ..., μₖ ∈ ℝⁿ**.\n",
     "\n",
-    "For each data point **x(i)**, define a cluster assignment **rᵢₖ** as:\n",
+    "For each data point x(i), we define a cluster assignment **rᵢₖ** as:\n",
     "\n",
     "**rᵢₖ =**  \n",
-    "- `1` if the data point **x(i)** is assigned to cluster `k`,  \n",
-    "- `0` otherwise.\n",
+    "- 1 if the data point **x(i)** is assigned to cluster `k`,  \n",
+    "- 0 otherwise.\n",
     "\n",
     "$$\n",
     "r_{i,k} = \n",
@@ -6904,23 +6904,22 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "The **K-Means objective** is to find both the assignments `{rᵢₖ}` and the centroids `{μₖ}` that minimize:\n",
+    "The main objective is to find both the cluster assignments rᵢₖ and the centroids μₖ that minimize the within-cluster sum of squares (so the sum of squares from all datapoints in a cluster to the centroid):\n",
     "\n",
     "$$\n",
     "J(\\{\\boldsymbol{\\mu}_k\\}, \\{r_{i,k}\\})\n",
     "= \\sum_{i=1}^m \\sum_{k=1}^K r_{i,k} \\, \\|\\mathbf{x}^{(i)} - \\boldsymbol{\\mu}_k\\|^2.\n",
     "$$\n",
     "\n",
-    "Here,  || · || denotes the Euclidean norm.\n",
+    "Here,  || · || represents the Euclidean norm which measures the distance between a data point and the cluster centroid.\n",
     "\n",
     "## Algorithmic Steps\n",
     "\n",
     "### 1) Initialization\n",
-    "Randomly pick K points from the dataset {x⁽ⁱ⁾} to serve as the initial centroids:\n",
-    "μ₁, μ₂, ..., μₖ.\n",
+    "First you randomly pick a certain amount of x⁽ⁱ⁾ points from the dataset to serve as the centroids. \n",
     "\n",
     "### 2) Assignment Step\n",
-    "Assign each data point x⁽ⁱ⁾ to the closest centroid. For each i:\n",
+    "After this assign all the leftover x⁽ⁱ⁾ datapoints to the centroids closest using a predefined distance metric. \n",
     "\n",
     "$$\n",
     "r_{i,k} := \n",
@@ -6931,7 +6930,8 @@
     "$$\n",
     "\n",
     "### 3) Update Step\n",
-    "Recalculate each centroid as the mean of the points assigned to that cluster:\n",
+    "Then recalculate each centroid as the mean of the points assigned to each specific cluster:\n",
+    "\n",
     "\n",
     "$$\n",
     "\\boldsymbol{\\mu}_k := \n",
@@ -6940,30 +6940,17 @@
     "$$\n",
     "\n",
     "### 4) Repeat\n",
-    "Repeat the **Assignment** and **Update** steps until convergence (e.g., when assignments stop changing or when a maximum number of iterations is reached).\n",
+    "Keep repeating step 2 and 3 until the clusters don't change anymore or when a maximum number of iterations is reached. \n",
     "\n",
     "## Distance Metric\n",
-    "By default, **Euclidean distance** is used:\n",
+    "The euclidean distance is used by default, which is calculated the following:\n",
     "\n",
     "$$\n",
     "d(\\mathbf{x}^{(i)}, \\mathbf{x}^{(j)}) = \n",
     "\\sqrt{\\sum_{\\ell=1}^n \\bigl(x^{(i)}_\\ell - x^{(j)}_\\ell\\bigr)^2}.\n",
     "$$\n",
     "\n",
-    "This aligns with the squared-distance objective in K-Means.\n",
-    "\n",
-    "## Advantages and Disadvantages\n",
-    "\n",
-    "**Advantages**  \n",
-    "- Conceptually simple and usually fast to compute.  \n",
-    "- Effective when data naturally forms roughly spherical clusters.\n",
-    "\n",
-    "**Disadvantages**  \n",
-    "- *Sensitive to outliers* (the mean shifts significantly due to extreme values).  \n",
-    "- Must choose \\(K\\) in advance, which can be tricky.  \n",
-    "- Assumes clusters are roughly similar in size/shape (convex).  \n",
-    "- Euclidean distance in very high-dimensional spaces may become less meaningful.\n",
-    "\n",
+    "Sharma, N. (2024, 15 april). K-Means Clustering explained. neptune.ai. https://neptune.ai/blog/k-means-clustering\n",
     "\n",
     "ChatGPT - New chat. (z.d.). ChatGPT. https://chatgpt.com/share/6790cd05-83d0-800b-a2db-457eb142a42a\n"
    ]
